--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "test": "jest"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "@types/react": "^17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
 }
